CRUD done and cleaned up.  Nested Resouce is up next

--- a/app/templates/vacation/index.hbs
+++ b/app/templates/vacation/index.hbs
@@ -1,5 +1,5 @@
 <div class="row row-header">
-  {{action-bar actionsArray=actionsArray outercontroller=this}}
+  {{action-bar actionsArray=actionsArray outerController=this id=model.id idType="vacation" transitionDestroy="/" transitionUpdate="vacation"}}
 </div>
 <div class="row row-content">
   <div class="col-xs-2" id="left-landing-column">
