render multiple outelts try

--- a/app/templates/vacation.hbs
+++ b/app/templates/vacation.hbs
@@ -1,1 +1,11 @@
 {{outlet}}
+<div class="row row-content">
+  <div class="col-xs-2" id="left-landing-column">
+
+  </div>
+  <div class="col-xs-8">
+
+  </div>
+  <div class="col-xs-2" id="right-landing-column">
+  </div>
+</div>
