left resource complete

--- a/app/styles/action-bar-component.css
+++ b/app/styles/action-bar-component.css
@@ -24,7 +24,7 @@
   min-width: 120px;
   font-family: 'BenchNine', sans-serif;
   background-color: #F4F4F4;
-  border-color: #F4F4F4;
+  border-color: #5300A6;
 }
 
 .btn-group-justified > .btn:hover, .btn-group-justified > a > .btn:hover {
