learning data flow

--- a/app/templates/components/action-bar.hbs
+++ b/app/templates/components/action-bar.hbs
@@ -1,3 +1,4 @@
+{{log "ember - app/templates/components/action-bar.hbs"}}
 <div class="btn-group btn-group-justified" role="group" aria-label="...">
   {{#each actionHash in actionsArray}}
     {{#if actionHash.link}}
