--- a/app/templates/components/model-slider.hbs
+++ b/app/templates/components/model-slider.hbs
@@ -1,3 +1,4 @@
+{{log "ember - app/templates/components/model-slider.hbs"}}
 <button class="slider-button" id="slider-button-left" {{action "slideLeft"}}>
 </button>
 {{#each displayModel as |vacation|}}
