--- a/app/templates/legs/new.hbs
+++ b/app/templates/legs/new.hbs
@@ -1,3 +1,4 @@
+{{log "ember - app/templates/legs/new.hbs"}}
 <div class="modal" id="newLegModal">
   <div class="modal-dialog">
     <div class="modal-content">
