--- a/app/templates/vacation.hbs
+++ b/app/templates/vacation.hbs
@@ -1,3 +1,4 @@
+{{log "ember - app/templates/vacation.hbs"}}
 {{outlet}}
 <div class="row row-content">
   <div class="col-xs-2" id="left-landing-column">
