--- a/app/templates/vacation/edit.hbs
+++ b/app/templates/vacation/edit.hbs
@@ -1,3 +1,4 @@
+{{log "ember - app/templates/vacation/edit.hbs"}}
 <div class="modal" id="updateVacationModal">
   <div class="modal-dialog">
     <div class="modal-content">
