--- a/app/templates/vacations/index.hbs
+++ b/app/templates/vacations/index.hbs
@@ -1,3 +1,4 @@
+{{log "ember - app/templates/vacations/index.hbs"}}
 <div class="row row-header">
   {{action-bar actionsArray=actionsArray outercontroller=this}}
 </div>
