--- a/app/templates/vacations/new.hbs
+++ b/app/templates/vacations/new.hbs
@@ -1,3 +1,4 @@
+{{log "ember - app/templates/vacations/new.hbs"}}
 <div class="modal" id="newVacationModal">
   <div class="modal-dialog">
     <div class="modal-content">
