--- a/app/templates/vacation/index.hbs
+++ b/app/templates/vacation/index.hbs
@@ -1,3 +1,4 @@
+{{log "ember - app/templates/vacation/index.hbs"}}
 <div class="row row-header">
   {{action-bar actionsArray=actionsArray outerController=this id=model.id idType="vacation" transitionDestroy="/" transitionUpdate="vacation"}}
 </div>
