--- a/app/templates/vacations.hbs
+++ b/app/templates/vacations.hbs
@@ -1,7 +1,8 @@
+{{log "ember - app/templates/vacations.hbs"}}
 <div class="container">
   {{outlet}}
 
   <div class="row row-footer">
     {{model-slider model=model action="focusedModel"}}
-  </div>  
+  </div>
 </div>
