about to try to move model of model slider to somethign else

--- a/app/templates/vacation/index.hbs
+++ b/app/templates/vacation/index.hbs
@@ -2,3 +2,18 @@
 <div class="row row-header">
   {{action-bar actionsArray=actionsArray outerController=this id=model.id idType="vacation" transitionDestroy="/" transitionUpdate="vacation"}}
 </div>
+<div class="row row-content">
+  <div class="col-xs-2" id="left-landing-column">
+    {{#each model.legs as |leg|}}
+      {{leg.endingCity}}
+    {{/each}}
+  </div>
+  <div class="col-xs-8">
+
+  </div>
+  <div class="col-xs-2" id="right-landing-column">
+  </div>
+</div>
+<div class="row row-footer">
+  {{model-slider model=model action="focusedModel"}}
+</div>
