--- a/app/templates/vacations/index.hbs
+++ b/app/templates/vacations/index.hbs
@@ -12,3 +12,6 @@
   <div class="col-xs-2" id="right-landing-column">
   </div>
 </div>
+<div class="row row-footer">
+  {{model-slider model=model action="focusedModel"}}
+</div>
