--- a/app/templates/vacation/edit.hbs
+++ b/app/templates/vacation/edit.hbs
@@ -4,7 +4,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title">New Vacation</h4>
+        <h4 class="modal-title">Edit Vacation</h4>
       </div>
       <div class="modal-body">
 
