--- a/app/templates/vacation/index.hbs
+++ b/app/templates/vacation/index.hbs
@@ -15,5 +15,5 @@
   </div>
 </div>
 <div class="row row-footer">
-  {{model-slider model=model action="focusedModel"}}
+  {{model-slider innerModel=innerModel action="focusedModel" focusedModel=focusedModel}}
 </div>
