--- a/app/templates/components/model-slider.hbs
+++ b/app/templates/components/model-slider.hbs
@@ -1,7 +1,7 @@
 {{log "ember - app/templates/components/model-slider.hbs"}}
 <button class="slider-button" id="slider-button-left" {{action "slideLeft"}}>
 </button>
-{{#each displayModel as |vacation|}}
+{{#each firstFive as |vacation|}}
   <button class="slider-object {{sliderDimensions}}" id="slider-button-{{vacation.id}}" {{action "sliderButtonFocus" vacation.id}}>
     {{vacation.name}}
   </button>
