--- a/app/styles/model-slider-component.css
+++ b/app/styles/model-slider-component.css
@@ -41,6 +41,8 @@
   border-color: #5300A6;
   border-style: solid;
   border-width: 2px;
+  background: #9C9CBC;
+  color: black;
 }
 
 .slider-selected {
