--- a/app/templates/-leg-container.hbs
+++ b/app/templates/-leg-container.hbs
@@ -1,3 +1,9 @@
-<button class="leg-button" id="leg-button-{{leg.id}}" {{action "focusedLeg" leg.id}}>
-{{leg.endingCity}}
-</button>
+{{#if leg.focused}}
+  <button class="leg-button focused-leg" id="leg-button-{{leg.id}}" {{action "focusedLeg" leg.id}}>
+    {{leg.endingCity}}
+  </button>
+{{else}}
+  <button class="leg-button" id="leg-button-{{leg.id}}" {{action "focusedLeg" leg.id}}>
+    {{leg.endingCity}}
+  </button>
+{{/if}}
