--- a/app/templates/vacation/index.hbs
+++ b/app/templates/vacation/index.hbs
@@ -8,8 +8,8 @@
       {{partial "leg-container"}}
     {{/each}}
   </div>
-  <div class="col-xs-8">
-
+  <div class="col-xs-8 google-map-holder">
+    {{google-map latitude="37.8282" longitude="-98.5795" legModel=legModel}}
   </div>
   <div class="col-xs-2" id="right-landing-column">
   </div>
