--- a/app/templates/vacation/index.hbs
+++ b/app/templates/vacation/index.hbs
@@ -9,7 +9,7 @@
     {{/each}}
   </div>
   <div class="col-xs-8 google-map-holder">
-    {{google-map latitude="37.8282" longitude="-98.5795" legModel=legModel}}
+    {{google-map latitude="37.8282" longitude="-98.5795" model=model outerController=this}}
   </div>
   <div class="col-xs-2" id="right-landing-column">
   </div>
