--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -1,1 +1,7 @@
 <div u="image" class="map-canvas"></div>
+{{#each markers as |marker|}}
+  {{marker.latitude}}
+{{/each}}
+{{#each markerSet as |marker|}}
+
+{{/each}}
