--- a/app/templates/vacation/index.hbs
+++ b/app/templates/vacation/index.hbs
@@ -1,4 +1,3 @@
-{{log "ember - app/templates/vacation/index.hbs"}}
 <div class="row row-header">
   {{action-bar actionsArray=actionsArray transitionDestroy="/" id=model.id outerController=this idType="vacation"}}
 </div>
@@ -9,7 +8,7 @@
     {{/each}}
   </div>
   <div class="col-xs-8 google-map-holder">
-    {{google-map latitude="37.8282" longitude="-98.5795" model=model outerController=this}}
+    {{google-map latitude="37.8282" longitude="-98.5795" innerModel=innerModel model=model outerController=this markers=markers}}
   </div>
   <div class="col-xs-2" id="right-landing-column">
   </div>
