--- a/app/templates/vacation/index.hbs
+++ b/app/templates/vacation/index.hbs
@@ -1,5 +1,5 @@
 <div class="row row-header">
-  {{action-bar actionsArray=actionsArray transitionDestroy="/" id=model.id outerController=this idType="vacation"}}
+  {{action-bar actionsArray=model.actionsArray transitionDestroy="/" id=model.id outerController=this idType="vacation"}}
 </div>
 <div class="row row-content">
   <div class="col-xs-2 leg-holder" id="left-landing-column">
@@ -8,11 +8,11 @@
     {{/each}}
   </div>
   <div class="col-xs-8 google-map-holder">
-    {{google-map latitude="37.8282" longitude="-98.5795" innerModel=innerModel model=model outerController=this markers=markers}}
+    {{google-map latitude="37.8282" longitude="-98.5795" innerModel=model.innerModel model=model outerController=this legs=model.legs}}
   </div>
   <div class="col-xs-2" id="right-landing-column">
   </div>
 </div>
 <div class="row row-footer">
-  {{model-slider innerModel=innerModel action="focusedModel" modelId=model.id outerController=this idType="vacation"}}
+  {{model-slider innerModel=model.innerModel action="focusedModel" modelId=model.id outerController=this idType="vacation"}}
 </div>
