vacations changed to roadtrips

--- a/app/templates/roadtrip/index.hbs
+++ b/app/templates/roadtrip/index.hbs
@@ -1,5 +1,5 @@
 <div class="row row-header">
-  {{action-bar actionsArray=model.actionsArray transitionDestroy="/" id=model.id outerController=this idType="vacation"}}
+  {{action-bar actionsArray=model.actionsArray transitionDestroy="/" id=model.id outerController=this idType="roadtrip"}}
 </div>
 <div class="row row-content">
   <div class="col-xs-2 leg-holder" id="left-landing-column">
@@ -14,5 +14,5 @@
   </div>
 </div>
 <div class="row row-footer">
-  {{model-slider innerModel=model.innerModel action="focusedModel" modelId=model.id outerController=this idType="vacation"}}
+  {{model-slider innerModel=model.innerModel action="focusedModel" modelId=model.id outerController=this idType="roadtrip"}}
 </div>
