--- a/app/templates/roadtrips/index.hbs
+++ b/app/templates/roadtrips/index.hbs
@@ -14,5 +14,5 @@
   </div>
 </div>
 <div class="row row-footer">
-  {{model-slider innerModel=model action="focusedModel" outerController=this idType="vacation"}}
+  {{model-slider innerModel=model action="focusedModel" outerController=this idType="roadtrip"}}
 </div>
