--- a/app/templates/components/model-slider.hbs
+++ b/app/templates/components/model-slider.hbs
@@ -1,14 +1,14 @@
 <button class="slider-button" id="slider-button-left" {{action "slideLeft"}}>
   {{fa-icon "fa fa-arrow-circle-left"}}
 </button>
-{{#each firstFive as |vacation|}}
-  {{#if vacation.focused}}
-    <button class="slider-object {{sliderDimensions}} slider-selected" id="slider-button-{{vacation.id}}" {{action "sliderButtonFocus" vacation.id}}>
-      {{vacation.name}}
+{{#each firstFive as |roadtrip|}}
+  {{#if roadtrip.focused}}
+    <button class="slider-object {{sliderDimensions}} slider-selected" id="slider-button-{{roadtrip.id}}" {{action "sliderButtonFocus" roadtrip.id}}>
+      {{roadtrip.name}}
     </button>
   {{else}}
-    <button class="slider-object {{sliderDimensions}}" id="slider-button-{{vacation.id}}" {{action "sliderButtonFocus" vacation.id}}>
-      {{vacation.name}}
+    <button class="slider-object {{sliderDimensions}}" id="slider-button-{{roadtrip.id}}" {{action "sliderButtonFocus" roadtrip.id}}>
+      {{roadtrip.name}}
     </button>
   {{/if}}
 {{/each}}
