--- a/app/templates/roadtrip/edit.hbs
+++ b/app/templates/roadtrip/edit.hbs
@@ -1,9 +1,9 @@
-<div class="modal" id="updateVacationModal">
+<div class="modal" id="updateroadtripModal">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title">Edit Vacation</h4>
+        <h4 class="modal-title">Edit roadtrip</h4>
       </div>
       <div class="modal-body">
 
