--- a/app/templates/roadtrips/new.hbs
+++ b/app/templates/roadtrips/new.hbs
@@ -1,9 +1,9 @@
-<div class="modal" id="newVacationModal">
+<div class="modal" id="newroadtripModal">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title">New Vacation</h4>
+        <h4 class="modal-title">New roadtrip</h4>
       </div>
       <div class="modal-body">
 
