--- a/app/templates/roadtrip/index.hbs
+++ b/app/templates/roadtrip/index.hbs
@@ -8,7 +8,7 @@
     {{/each}}
   </div>
   <div class="col-xs-8 google-map-holder">
-    {{google-map latitude="37.8282" longitude="-98.5795" innerModel=model.innerModel model=model outerController=this legs=model.legs}}
+    {{google-map latitude="37.8282" longitude="-98.5795" legs=model.legs}}
   </div>
   <div class="col-xs-2" id="right-landing-column">
   </div>
