--- a/app/templates/roadtrips/index.hbs
+++ b/app/templates/roadtrips/index.hbs
@@ -8,7 +8,7 @@
     {{/each}}
   </div>
   <div class="col-xs-8">
-
+    {{google-map latitude="37.8282" longitude="-98.5795" legs=focusModel.legs}}
   </div>
   <div class="col-xs-2" id="right-landing-column">
   </div>
