--- a/app/templates/roadtrip/index.hbs
+++ b/app/templates/roadtrip/index.hbs
@@ -8,9 +8,10 @@
     {{/each}}
   </div>
   <div class="col-xs-8 google-map-holder">
-    {{google-map latitude="37.8282" longitude="-98.5795" legs=model.legs}}
+    {{google-map latitude="37.8282" longitude="-98.5795" legs=model.legs action="googleMapsActions" testMap=model.savedMap}}
   </div>
   <div class="col-xs-2" id="right-landing-column">
+    {{stats-displayer model=model}}
   </div>
 </div>
 <div class="row row-footer">
