--- a/app/templates/roadtrip.hbs
+++ b/app/templates/roadtrip.hbs
@@ -1,1 +1,11 @@
-{{outlet}}
+<div class="row row-header">
+  {{action-bar actionsArray=model.actionsArray transitionDestroy="/" id=model.id outerController=this idType="roadtrip"}}
+</div>
+<div class="row row-content">
+  <div class="col-xs-2 leg-holder" id="left-landing-column">
+    {{#each model.legs as |leg|}}
+    {{partial "leg-container"}}
+    {{/each}}
+  </div>
+  {{outlet}}  
+</div>
