finished cleaning up the code to my new level

--- a/app/templates/roadtrip/edit.hbs
+++ b/app/templates/roadtrip/edit.hbs
@@ -19,14 +19,14 @@
 
           <div class="form-group"><label class="control-label col-xs-3 col-sm-3 col-md-3  col-lg-3">Number of Days</label>
             <div class="col-xs-7 col-sm-7 col-md-7  col-lg-7">
-              {{input value=numberOfDays type="text" id="number-of-days" class="form-control" required="true"}}
+              {{input value=model.numberOfDays type="text" id="number-of-days" class="form-control" required="true"}}
             </div>
             <div class="col-xs-2 col-sm-2 col-md-2  col-lg-2"></div>
           </div>
 
           <div class="form-group"><label class="control-label col-xs-3 col-sm-3 col-md-3  col-lg-3">Hours of Sleep</label>
             <div class="col-xs-7 col-sm-7 col-md-7  col-lg-7">
-              {{input value=hoursOfSleep type="text" id="hours-of-sleep" class="form-control" required="true"}}
+              {{input value=model.hoursOfSleep type="text" id="hours-of-sleep" class="form-control" required="true"}}
             </div>
             <div class="col-xs-2 col-sm-2 col-md-2  col-lg-2"></div>
           </div>
