--- a/app/templates/roadtrip/index.hbs
+++ b/app/templates/roadtrip/index.hbs
@@ -1,5 +1,5 @@
 <div class="col-xs-8 google-map-holder">
-  {{google-map latitude="37.8282" longitude="-98.5795" legs=model.legs action="googleMapsActions" testMap=model.savedMap}}
+  {{google-map latitude="37.8282" longitude="-98.5795" legs=model.legs action="googleMapsActions"}}
 </div>
 <div class="col-xs-2" id="right-landing-column">
   {{stats-displayer model=model}}
