--- a/app/styles/roadtrips.css
+++ b/app/styles/roadtrips.css
@@ -10,6 +10,10 @@ html, body, .ember-view, .container{
   padding: 0px;
 }
 
+.map-canvas {
+  height: 100%;
+}
+
 /*****HEADER*****/
 .row-header {
   height: 10%;
@@ -61,9 +65,34 @@ html, body, .ember-view, .container{
   margin-bottom: 2%;
 }
 
-
 .row-content > #right-landing-column:hover {
   border-color: #5300A6;
+}
+
+.leg-holder {
+  text-align: center;
+}
+
+.leg-holder > ol {
+  height: 100%;
+}
+
+.leg-button {
+  width: 90%;
+  height: 10%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+}
+
+.leg-button:hover {
+  width: 100%;
+  background: #9C9CBC;
+}
+
+.leg-button-focused {
+  width: 100%;
+  background: #5300A6;
+  color: white;
 }
 
 /****************/
