--- a/app/templates/roadtrip.hbs
+++ b/app/templates/roadtrip.hbs
@@ -4,8 +4,10 @@
 <div class="row row-content">
   <div class="col-xs-2 leg-holder" id="left-landing-column">
     {{#each model.legs as |leg|}}
-    {{partial "leg-container"}}
+      <button class="leg-button" id="leg-button-{{leg.id}}" {{action "focusedLeg" leg.id}}>
+        {{leg.endingCity}}
+      </button>
     {{/each}}
   </div>
-  {{outlet}}  
+  {{outlet}}
 </div>
