--- a/app/templates/roadtrips.hbs
+++ b/app/templates/roadtrips.hbs
@@ -1,4 +1,4 @@
 {{outlet}}
 <div class="row row-footer">
-  {{model-slider innerModel=model action="focusedModel" outerController=this idType="roadtrip"}}
+  {{model-slider innerModel=model action="focusedModel"}}
 </div>
