--- a/app/templates/roadtrip.hbs
+++ b/app/templates/roadtrip.hbs
@@ -1,5 +1,5 @@
 <div class="row row-header">
-  {{action-bar actionsArray=model.actionsArray transitionDestroy="/" id=model.id outerController=this idType="roadtrip"}}
+  {{action-bar actionsArray=model.actionsArray transitionDestroy="/" innerRoute=model.innerRoute id=model.id outerController=this idType="roadtrip" action="actionBarActions"}}
 </div>
 <div class="row row-content">
   <div class="col-xs-2 leg-holder" id="left-landing-column">
