--- a/app/templates/roadtrip/index.hbs
+++ b/app/templates/roadtrip/index.hbs
@@ -1,6 +1,12 @@
 <div class="col-xs-8 google-map-holder">
+  {{log model.legs}}
   {{google-map latitude="37.8282" longitude="-98.5795" legs=model.legs action="googleMapsActions"}}
 </div>
 <div class="col-xs-2" id="right-landing-column">
-  {{stats-displayer model=model}}
+  <table>
+    <tbody>
+      {{stats-displayer model=model}}
+      {{government-api-stat-displayer model=model}}
+    </tbody>
+  </table>
 </div>
