--- a/app/templates/roadtrips/new.hbs
+++ b/app/templates/roadtrips/new.hbs
@@ -31,6 +31,31 @@
             <div class="col-xs-2 col-sm-2 col-md-2  col-lg-2"></div>
           </div>
 
+          <div class="form-group">
+            <label class="control-label col-xs-3 col-sm-3 col-md-3 col-lg-3">Year of Vehicle</label>
+            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+              {{select-menu-dropdown listOfItems=model.yearsAvailable currentSelection=model.defaultYear action="currentYearChanged"}}
+            </div>
+            <div class="col-xs-2 col-sm-2 col-md-2  col-lg-2"></div>
+          </div>
+
+          <div class="form-group default-hidden" id="car-make-group">
+            <label class="control-label col-xs-3 col-sm-3 col-md-3 col-lg-3">Make of Vehicle</label>
+            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+              {{select-menu-dropdown listOfItems=model.makesAvailable currentSelection=model.defaultMake action="currentMakeChanged"}}
+            </div>
+            <div class="col-xs-2 col-sm-2 col-md-2  col-lg-2"></div>
+          </div>
+
+          <div class="form-group default-hidden" id="car-model-group">
+            <label class="control-label col-xs-3 col-sm-3 col-md-3 col-lg-3">Model of Vehicle</label>
+            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+              {{select-menu-dropdown listOfItems=model.modelsAvailable currentSelection=model.defaultModel action="currentModelChanged"}}
+            </div>
+            <div class="col-xs-2 col-sm-2 col-md-2  col-lg-2"></div>
+          </div>
+
+
           <div class="text-center col-xs-12 col-sm-12 col-md-12  col-lg-12">
             <button  type="submit" class="btn btn-success modal-create-button" value="Create">Create</button>
           </div>
