--- a/app/templates/components/stats-displayer.hbs
+++ b/app/templates/components/stats-displayer.hbs
@@ -74,3 +74,13 @@
     <td class="stats-displayer-percent">100.00%</td>
   </tr>
 {{/if}}
+<tr class="stats-displayer-main-label-row">
+  <td></td>
+  <td>Cost</td>
+  <td></td>
+</tr>
+<tr>
+  <td class="stats-displayer-label">Gas:</td>
+  <td class="stats-displayer-value">${{gasTotal}}</td>
+  <td></td>
+</tr>
