--- a/app/templates/roadtrip/index.hbs
+++ b/app/templates/roadtrip/index.hbs
@@ -5,8 +5,7 @@
 <div class="col-xs-2" id="right-landing-column">
   <table>
     <tbody>
-      {{stats-displayer model=model}}
-      {{government-api-stat-displayer model=model}}
+      {{stats-displayer model=model distanceInMiles=model.distanceInMiles}}
     </tbody>
   </table>
 </div>
